--- a/faq.html
+++ b/faq.html
@@ -13,10 +13,9 @@
 <body>
 
 <div class="faq">
-<h2><i class='bx bx-question-mark'></i>Are you single</h2>
-<p>Sorry Ladies <i class='bx bx-sad'></i></p>
-<h2><i class='bx bx-question-mark'></i>How big is it</h2>
-<p><i class='bx bx-error'></i>22cm</p>
+<h2><i class='bx bx-question-mark'></i>Are you looking for a Data Entry position?</h2>
+<p>Yes</p>
+
 <button class="faqbutton" onclick="window.location.href='index.html#footer';">Back</button>
 
 </div>
