--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#education">Education</a>
             <a href="#services">Services</a>
-            <a href="#testimonials">Testimonials</a>
+            <a href="#testimonials">Feedback</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="home-img">
-            <img src='profilephoto.png' alt="image 1">; 
+            <img src='images/profilePhoto.png' alt="image 1">; 
         </div>
 
     </section>
@@ -156,50 +156,25 @@
 
     <section class="testimonials" id="testimonials">
         <div class="testimonials-box">
-            <h2 class="heading">Testimonials</h2>
+            <h2 class="heading">Feedback</h2>
 
             <div class="wrapper">
-                <div class="testimonial-item">
-                    <img src="jpg1.jpg" alt="">
-                    <h2>Jamie M.</h2>
-                    <div class="rating">
-                        <a href="https://photos.app.goo.gl/bAngwEvtuwapf2mU6" target="_blank">
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                    </a>
+                <a class="feedback-link" href="https://drive.google.com/file/d/1ItY5YdXHIY2eIJr52Em-6KCDCrkXBM8A/view" target="_blank">
+                    <div class="testimonial-item" >
+                        <img src="images/feedbackPhoto1.jpg" alt="">
+                        <h2>Jamie M.</h2>
+                        <div class="rating">
+                            <a href="https://photos.app.goo.gl/bAngwEvtuwapf2mU6" target="_blank">
+                            <i class='bx bxs-star' id="star"></i>
+                            <i class='bx bxs-star' id="star"></i>
+                            <i class='bx bxs-star' id="star"></i>
+                            <i class='bx bxs-star' id="star"></i>
+                            <i class='bx bxs-star' id="star"></i>
+                        </a>
+                        </div>
+                        <p>"Great service!"</p>
                     </div>
-                    <p>"Great service!"</p>
-                </div>
-                <div class="testimonial-item">
-                    <img src="website.jpg" alt="">
-                    <h2>Stefan Komshija</h2>
-                    <div class="rating">
-                        <a href="https://photos.app.goo.gl/tkHV3ozMdrEoZ1X4A" target="_blank">
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                    </a>
-                    </div>
-                    <p>"top"</p>
-                </div>
-                <div class="testimonial-item">
-                    <img src="unnamed.jpg" alt="">
-                    <h2>Arminius</h2>
-                    <div class="rating">
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                        <i class='bx bxs-star' id="star"></i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum quod nihil voluptatum ratione ex
-                        omnis maiores voluptatibus quidem minima tenetur?</p>
-                </div>
+                </a>
             </div>
         </div>
     </section>
@@ -255,7 +230,7 @@
             </li>
 
             <li>
-                <a href="#testimonials">Testimonials</a>
+                <a href="#testimonials">Feedback</a>
             </li>
         </ul>
         <p class="copyright">
